--- a/index.html
+++ b/index.html
@@ -1,11 +1,85 @@
 <!DOCTYPE html>
-<html lang="tr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Döküman</title>
-</head>
-<body>
-    
-</body>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style/index.css" />
+    <title>WORKINTECH ACADEM</title>
+  </head>
+  <body>
+    <!-- ** header ** -->
+    <!-- 
+      html-1 header'da WiT yazısı h2 tag'i ile olsun,
+      html-2 navigasyon menüsü anchor tag ile 4 item olarak oluşturulsun
+      html-3 ilk item'ın class'ı active olsun.
+    -->
+    <header>
+      <h2>WiT</h2>
+      <nav>
+        <a href="#" class="active">Anasayfa</a>
+        <a href="#">Hakkımızda</a>
+        <a href="#">İletişim</a>
+        <a href="#">Programlar</a>
+      </nav>
+    </header>
+
+    <!-- ** banner ** -->
+    <!--
+      html-4 class'ı banner-section olan bir bölüm(section) oluşturulsun,
+      html-5 içinde banner-content class'ı ile gruplanmış bir div tag'i olsun.
+      html-6 div'in içinde uygun heading ile yazı ve 
+      html-7 class'ı btn olan button olsun
+    -->
+    <section class="banner-section">
+      <div class="banner-content">
+        <div>
+          <h2>Uygun Başlık</h2>
+          <!-- Diğer içerikler buraya eklenebilir -->
+          <button class="btn">Click Me</button>
+        </div>
+      </div>
+    </section>
+    <!-- ** projects ** -->
+    <!--
+      html-8 class'ı projects-section olan bir bölüm oluşturulsun,
+      html-9 içinde class'ı projects-item olan 6 tane div olsun,
+      html-10 bu div'lerin içinde bir img ve h3 tag'i içinde metni olsun.
+
+      Not: wireframe olduğu için image'lara şimdilik src eklemeyelim!
+    -->
+    <section class="projects-section">
+      <div class="projects-item">
+        <img src="" alt="Project Image" />
+        <h3>Proje Başlığı 1</h3>
+      </div>
+      <div class="projects-item">
+        <img src="" alt="Project Image" />
+        <h3>Proje Başlığı 2</h3>
+      </div>
+      <div class="projects-item">
+        <img src="" alt="Project Image" />
+        <h3>Proje Başlığı 3</h3>
+      </div>
+      <div class="projects-item">
+        <img src="" alt="Project Image" />
+        <h3>Proje Başlığı 4</h3>
+      </div>
+      <div class="projects-item">
+        <img src="" alt="Project Image" />
+        <h3>Proje Başlığı 5</h3>
+      </div>
+      <div class="projects-item">
+        <img src="" alt="Project Image" />
+        <h3>Proje Başlığı 6</h3>
+      </div>
+    </section>
+    <!-- ** footer ** -->
+    <!--
+      html-11 footer'ı oluşturalım,
+      html-12 içinde class'ı btn olan button olsun.
+    -->
+    <footer class="footer-section">
+      <button class="btn">Click Me</button>
+    </footer>
+  </body>
 </html>
