--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style/index.css" />
-    <title>WORKINTECH ACADEM</title>
+    <title>my project page</title>
   </head>
   <body>
     <header class="main-header">
